<package>
  <name>sbpl_utils</name>
  <version>1.0.0</version>
  <description>sbpl_utils</description>
  <maintainer email="venkatraman@cmu.edu">Venkatraman Narayanan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sbpl_utils</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Venkatraman Narayanan</author>

  <buildtool_depend>catkin</buildtool_depend>

<!--  <build_depend>sbpl</build_depend> -->

<!--  <run_depend>sbpl</run_depend> -->
</package>
